[package]
name = "valence_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1"
bevy_egui = { git = "https://github.com/mvlabat/bevy_egui" }
bincode = "1.3"
cfg-if = "1"
chrono = "0.4.23"
dotenv = "0.15"
flume = "0.10.14"
futures = "0.3"
indicatif = "0.17.3"
itertools = "0.10"
lazy_static = "1"
lru = "0.10.0"
noise = "0.8"
rand = "0.8"
rayon = "1.6"
ron = "0.8"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1.26", features = ["full", "rt-multi-thread", "tracing"] }
toml = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
valence = { git = "https://github.com/valence-rs/valence", rev = "e933fd6" }
vek = "0.15"
walkdir = "2.3.2"

[dev-dependencies]
criterion = "0.4"

[dependencies.bevy]
version = "0.10"

[[bench]]
name = "gen_chunk"
harness = false

[[bench]]
name = "gen_multiple_chunks"
harness = false

[[bench]]
name = "compare_gen_chunk"
harness = false

[features]
default = ["minecraft", "online", "gui"]
minecraft = []
gui = []
online = []
